--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -107,6 +107,23 @@
   "importFormatLine4": "• The last | is optional",
   "importFormatLine5": "• Empty lines are ignored",
   "importFormatLine6": "• Duplicates are skipped",
+  "importProgress": "Importing: {current} / {total}",
+  "importFormatNewDescription": "Import items from a text file. Each line should contain an item with fields separated by ---",
+  "importFormatNewLine1": "• Main delimiter: ---",
+  "importFormatNewLine2": "• L1=<text> - Language 1 main text (required if L2 is missing)",
+  "importFormatNewLine3": "• L2=<text> - Language 2 main text (required if L1 is missing)",
+  "importFormatNewLine4": "• L1pre=<text> - Language 1 prefix (optional)",
+  "importFormatNewLine5": "• L1post=<text> - Language 1 suffix (optional)",
+  "importFormatNewLine6": "• L2pre=<text> - Language 2 prefix (optional)",
+  "importFormatNewLine7": "• L2post=<text> - Language 2 suffix (optional)",
+  "importFormatNewLine8": "• EX=<L1 text>:::<L2 text> - Example (optional, can be multiple)",
+  "importFormatNewLine9": "• CAT=<cat1>:::<cat2>:::<cat3> - Categories (optional)",
+  "importFormatNewLine10": "• At least one of L1= or L2= must be present",
+  "importFormatNewLine11": "• Empty lines are ignored",
+  "importFormatNewLine12": "• Duplicates are skipped",
+  "invalidImportLine": "Invalid line",
+  "missingRequiredFields": "Missing 'L1=' vagy 'L2='",
+  "unknownField": "Unknown field prefix",
   "andMore": "... and {count} more",
   "browseItems": "Browse Items",
   "itemDetails": "Details",
@@ -247,6 +264,65 @@
   "nextItem": "Next Item",
   "iDidNotKnowEither": "I Didn't Know Either",
   "exportBeforeDelete": "Export Before Deleting?",
+  "aiTextAnalysis": "AI Text Analysis",
+  "aiTextAnalysisImport": "AI Text Analysis Import",
+  "knowledgeLevel": "Knowledge Level",
+  "a1Beginner": "A1 - Beginner",
+  "a2Elementary": "A2 - Elementary",
+  "b1Intermediate": "B1 - Intermediate",
+  "b2UpperIntermediate": "B2 - Upper Intermediate",
+  "c1Advanced": "C1 - Advanced",
+  "c2Proficient": "C2 - Proficient",
+  "pasteTextHere": "Paste your text here...",
+  "extractWords": "Extract Words",
+  "extractExpressions": "Extract Expressions",
+  "maxItems": "Maximum Items",
+  "maxItemsHint": "Leave empty for no limit",
+  "generateExamples": "Generate Examples",
+  "categoryName": "Category Name",
+  "categoryNameHint": "Name for imported items category",
+  "analyzeText": "Analyze Text",
+  "configureAnalysis": "Configure Analysis",
+  "openaiModel": "AI Model",
+  "openaiModelDescription": "Select ChatGPT model",
+  "modelGpt35Turbo": "GPT-3.5 Turbo",
+  "modelGpt35Turbo16k": "GPT-3.5 Turbo 16K",
+  "modelGpt4": "GPT-4",
+  "modelGpt4Turbo": "GPT-4 Turbo",
+  "modelGpt35TurboDesc": "Fast and cost-effective; standard for production",
+  "modelGpt35Turbo16kDesc": "Same as GPT-3.5, but 16K token context window",
+  "modelGpt4Desc": "Higher accuracy/reasoning; slower and more expensive",
+  "modelGpt4TurboDesc": "Faster, cheaper, high accuracy; improved context",
+  "analyzing": "Analyzing...",
+  "languageDetected": "Language Detected",
+  "itemsFound": "Items Found",
+  "selectItemsToImport": "Select Items to Import",
+  "selectAll": "Select All",
+  "deselectAll": "Deselect All",
+  "importSelected": "Import Selected",
+  "importing": "Importing...",
+  "itemsImported": "Items imported successfully",
+  "noItemsSelected": "No items selected",
+  "textCannotBeEmpty": "Text cannot be empty",
+  "selectAtLeastOneType": "Select at least one type (words or expressions)",
+  "languageNotMatching": "The detected language does not match any language in the package",
+  "openaiKeyRequired": "OpenAI API key is required for this feature",
+  "analyzingProgress": "Analyzing: {current} / {total}",
+  "translatingProgress": "Translating: {current} / {total}",
+  "duplicate": "Duplicate",
+  "importProgress": "Importing {current} of {total}",
+  "detectingLanguage": "Detecting language...",
+  "extractingItems": "Extracting items...",
+  "checkingDuplicates": "Checking for duplicates...",
+  "translating": "Translating...",
+  "generatingExamples": "Generating examples...",
+  "errorAnalyzingText": "Error analyzing text",
+  "errorImportingItems": "Error importing items",
+  "warning": "Warning",
+  "textIsVeryLarge": "The text is very large",
+  "words": "words",
+  "continueAnalysis": "This may take longer to process and will be analyzed in chunks. Do you want to continue",
+  "continueLabel": "Continue",
   "exportBeforeDeleteMessage": "Would you like to export this package before deleting it? This will save all your data to a ZIP file.",
   "deleteWithoutExport": "Delete Without Export",
   "exportAndDelete": "Export and Delete",
@@ -259,5 +335,40 @@
   "trainingSessionProgress": "Training Session Progress",
   "total": "Total",
   "lastNValue": "N = {value}",
-  "errorLoadingSettings": "Error loading settings: {error}"
+  "errorLoadingSettings": "Error loading settings: {error}",
+  "selectPackage": "Select Package",
+  "noPackagesAvailable": "No packages available",
+  "possibleSolutions": "Possible Solutions",
+  "technicalDetails": "Technical Details",
+  "close": "Close",
+  "checkApiKey": "Check your OpenAI API key",
+  "ensureValidOpenAIKey": "Ensure the API key is valid and active",
+  "verifyKeyInSettings": "Verify the key in Settings",
+  "rateLimitExceeded": "API rate limit exceeded",
+  "waitAndRetry": "Wait a few minutes and try again",
+  "checkAccountQuota": "Check your OpenAI account quota",
+  "invalidRequest": "Invalid request format",
+  "tryReducingTextLength": "Try reducing the text length",
+  "checkTextFormat": "Check that the text format is correct",
+  "checkInternetConnection": "Check your internet connection",
+  "retryInMoment": "Retry in a moment",
+  "checkFirewall": "Check firewall settings",
+  "textMayBeTooShort": "Text may be too short",
+  "tryDifferentKnowledgeLevel": "Try a different knowledge level",
+  "ensureTextInCorrectLanguage": "Ensure text is in the correct language",
+  "requestTimedOut": "Request timed out",
+  "textMayBeTooLong": "Text may be too long",
+  "tryAgainOrReduceSize": "Try again or reduce text size",
+  "unexpectedError": "An unexpected error occurred",
+  "checkErrorDetails": "Check error details below",
+  "tryAgainLater": "Try again later",
+  "translationServiceFailed": "Translation service failed",
+  "checkApiKeys": "Check your API keys (DeepL, OpenAI)",
+  "retryImport": "Retry the import",
+  "exampleGenerationFailed": "Example generation failed",
+  "itemsStillImported": "Items were still imported",
+  "canAddExamplesManually": "You can add examples manually later",
+  "databaseError": "Database error occurred",
+  "checkStorageSpace": "Check available storage space",
+  "restartApp": "Try restarting the app"
 }
