--- a/lib/l10n/app_hu.arb
+++ b/lib/l10n/app_hu.arb
@@ -108,6 +108,23 @@
   "importFormatLine4": "• Az utolsó | opcionális",
   "importFormatLine5": "• Az üres sorok figyelmen kívül maradnak",
   "importFormatLine6": "• A duplikátumok kihagyásra kerülnek",
+  "importProgress": "Importálás: {current} / {total}",
+  "importFormatNewDescription": "Elemek importálása szöveges fájlból. Minden sor egy elemet tartalmaz, a mezőket --- választja el",
+  "importFormatNewLine1": "• Fő elválasztó: ---",
+  "importFormatNewLine2": "• L1=<szöveg> - 1. nyelv fő szövege (kötelező, ha L2 hiányzik)",
+  "importFormatNewLine3": "• L2=<szöveg> - 2. nyelv fő szövege (kötelező, ha L1 hiányzik)",
+  "importFormatNewLine4": "• L1pre=<szöveg> - 1. nyelv előtag (opcionális)",
+  "importFormatNewLine5": "• L1post=<szöveg> - 1. nyelv utótag (opcionális)",
+  "importFormatNewLine6": "• L2pre=<szöveg> - 2. nyelv előtag (opcionális)",
+  "importFormatNewLine7": "• L2post=<szöveg> - 2. nyelv utótag (opcionális)",
+  "importFormatNewLine8": "• EX=<L1 szöveg>:::<L2 szöveg> - Példa (opcionális, többször is szerepelhet)",
+  "importFormatNewLine9": "• CAT=<kat1>:::<kat2>:::<kat3> - Kategóriák (opcionális)",
+  "importFormatNewLine10": "• Legalább az L1= vagy az L2= kötelező",
+  "importFormatNewLine11": "• Az üres sorok figyelmen kívül maradnak",
+  "importFormatNewLine12": "• A duplikátumok kihagyásra kerülnek",
+  "invalidImportLine": "Érvénytelen sor",
+  "missingRequiredFields": "Hiányzik 'L1=' vagy 'L2='",
+  "unknownField": "Ismeretlen mező előtag",
   "andMore": "... és még {count}",
   "browseItems": "Elemek böngészése",
   "itemDetails": "Részletek",
@@ -247,7 +264,66 @@
   "iDontKnow": "Nem Tudom",
   "nextItem": "Következő Elem",
   "iDidNotKnowEither": "Ezt Sem Tudtam",
-  "exportBeforeDelete": "Exportálás Törlés Előtt?",
+  "exportBeforeDelete": "Exportálja törlés előtt?",
+  "aiTextAnalysis": "AI Szövegelemzés",
+  "aiTextAnalysisImport": "AI Szövegelemzés Import",
+  "knowledgeLevel": "Tudásszint",
+  "a1Beginner": "A1 - Kezdő",
+  "a2Elementary": "A2 - Alapszint",
+  "b1Intermediate": "B1 - Középhaladó",
+  "b2UpperIntermediate": "B2 - Felső középhaladó",
+  "c1Advanced": "C1 - Haladó",
+  "c2Proficient": "C2 - Felsőfokú",
+  "pasteTextHere": "Illessze be ide a szöveget...",
+  "extractWords": "Szavak kinyerése",
+  "extractExpressions": "Kifejezések kinyerése",
+  "maxItems": "Maximum elemszám",
+  "maxItemsHint": "Hagyja üresen korlát nélkül",
+  "generateExamples": "Példák generálása",
+  "categoryName": "Kategória neve",
+  "categoryNameHint": "Név az importált elemek kategóriájához",
+  "analyzeText": "Szöveg elemzése",
+  "configureAnalysis": "Elemzés Beállítása",
+  "openaiModel": "AI Modell",
+  "openaiModelDescription": "ChatGPT modell kiválasztása",
+  "modelGpt35Turbo": "GPT-3.5 Turbo",
+  "modelGpt35Turbo16k": "GPT-3.5 Turbo 16K",
+  "modelGpt4": "GPT-4",
+  "modelGpt4Turbo": "GPT-4 Turbo",
+  "modelGpt35TurboDesc": "Gyors és költséghatékony; általános használatra",
+  "modelGpt35Turbo16kDesc": "Mint a GPT-3.5, de 16K token kontextusablakkal",
+  "modelGpt4Desc": "Magasabb pontosság/érvelés; lassabb és drágább",
+  "modelGpt4TurboDesc": "Gyorsabb, olcsóbb, magas pontosság; jobb kontextus",
+  "analyzing": "Elemzés folyamatban...",
+  "languageDetected": "Észlelt nyelv",
+  "itemsFound": "Talált elemek",
+  "selectItemsToImport": "Válassza ki az importálandó elemeket",
+  "selectAll": "Összes kijelölése",
+  "deselectAll": "Összes kijelölés törlése",
+  "importSelected": "Kijelöltek importálása",
+  "importing": "Importálás...",
+  "itemsImported": "Elemek sikeresen importálva",
+  "noItemsSelected": "Nincs elem kijelölve",
+  "textCannotBeEmpty": "A szöveg nem lehet üres",
+  "selectAtLeastOneType": "Válasszon ki legalább egy típust (szavak vagy kifejezések)",
+  "languageNotMatching": "Az észlelt nyelv nem egyezik a csomag egyik nyelvével sem",
+  "openaiKeyRequired": "OpenAI API kulcs szükséges ehhez a funkcióhoz",
+  "analyzingProgress": "Elemzés: {current} / {total}",
+  "translatingProgress": "Fordítás: {current} / {total}",
+  "duplicate": "Duplikátum",
+  "importProgress": "{current} / {total} importálása",
+  "detectingLanguage": "Nyelv felismerése...",
+  "extractingItems": "Elemek kinyerése...",
+  "checkingDuplicates": "Duplikátumok ellenőrzése...",
+  "translating": "Fordítás...",
+  "generatingExamples": "Példák generálása...",
+  "errorAnalyzingText": "Hiba a szöveg elemzése során",
+  "errorImportingItems": "Hiba az elemek importálása során",
+  "warning": "Figyelmeztetés",
+  "textIsVeryLarge": "A szöveg nagyon hosszú",
+  "words": "szó",
+  "continueAnalysis": "Az elemzés hosszabb időt vehet igénybe és részletekben lesz feldolgozva. Folytatja",
+  "continueLabel": "Folytatás",
   "exportBeforeDeleteMessage": "Szeretnéd exportálni ezt a csomagot a törlés előtt? Ez minden adatot menteni fog egy ZIP fájlba.",
   "deleteWithoutExport": "Törlés Exportálás Nélkül",
   "exportAndDelete": "Exportálás és Törlés",
@@ -260,6 +336,41 @@
   "trainingSessionProgress": "Gyakorlás Előrehaladása",
   "total": "Összesen",
   "lastNValue": "N = {value}",
-  "errorLoadingSettings": "Hiba a beállítások betöltésekor: {error}"
+  "errorLoadingSettings": "Hiba a beállítások betöltésekor: {error}",
+  "selectPackage": "Csomag Kiválasztása",
+  "noPackagesAvailable": "Nincsenek elérhető csomagok",
+  "possibleSolutions": "Lehetséges Megoldások",
+  "technicalDetails": "Technikai Részletek",
+  "close": "Bezárás",
+  "checkApiKey": "Ellenőrizd az OpenAI API kulcsot",
+  "ensureValidOpenAIKey": "Győződj meg róla, hogy az API kulcs érvényes és aktív",
+  "verifyKeyInSettings": "Ellenőrizd a kulcsot a Beállításokban",
+  "rateLimitExceeded": "API használati korlát túllépve",
+  "waitAndRetry": "Várj néhány percet és próbáld újra",
+  "checkAccountQuota": "Ellenőrizd az OpenAI fiók kvótáját",
+  "invalidRequest": "Érvénytelen kérés formátum",
+  "tryReducingTextLength": "Próbáld meg csökkenteni a szöveg hosszát",
+  "checkTextFormat": "Ellenőrizd, hogy a szöveg formátuma helyes-e",
+  "checkInternetConnection": "Ellenőrizd az internet kapcsolatot",
+  "retryInMoment": "Próbáld újra egy pillanat múlva",
+  "checkFirewall": "Ellenőrizd a tűzfal beállításokat",
+  "textMayBeTooShort": "A szöveg túl rövid lehet",
+  "tryDifferentKnowledgeLevel": "Próbálj ki egy másik tudásszintet",
+  "ensureTextInCorrectLanguage": "Győződj meg róla, hogy a szöveg a megfelelő nyelven van",
+  "requestTimedOut": "A kérés időtúllépés miatt megszakadt",
+  "textMayBeTooLong": "A szöveg túl hosszú lehet",
+  "tryAgainOrReduceSize": "Próbáld újra vagy csökkentsd a szöveg méretét",
+  "unexpectedError": "Váratlan hiba történt",
+  "checkErrorDetails": "Nézd meg a hiba részleteit alább",
+  "tryAgainLater": "Próbáld újra később",
+  "translationServiceFailed": "A fordítási szolgáltatás hibát jelzett",
+  "checkApiKeys": "Ellenőrizd az API kulcsokat (DeepL, OpenAI)",
+  "retryImport": "Próbáld újra az importálást",
+  "exampleGenerationFailed": "A példamondatok generálása sikertelen",
+  "itemsStillImported": "Az elemek ettől függetlenül importálva lettek",
+  "canAddExamplesManually": "Később manuálisan is hozzáadhatsz példákat",
+  "databaseError": "Adatbázis hiba történt",
+  "checkStorageSpace": "Ellenőrizd a rendelkezésre álló tárhelyet",
+  "restartApp": "Próbáld újraindítani az alkalmazást"
 }
 
