--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -5,6 +5,8 @@
   "createPackage": "Create Package",
   "editPackage": "Edit Package",
   "packageDetails": "Package Details",
+  "packageName": "Package Name",
+  "packageNameHint": "e.g., Spanish Essentials, German Basics",
   "languageCode1": "Source Language Code",
   "languageName1": "Source Language Name",
   "languageCode2": "Target Language Code",
@@ -25,6 +27,7 @@
   "uploadCustomIcon": "Upload Custom Icon (max 512x512, 1MB)",
   "customIconUploaded": "Custom icon uploaded successfully",
   "save": "Save",
+  "edit": "Edit",
   "cancel": "Cancel",
   "delete": "Delete",
   "confirmDelete": "Are you sure you want to delete this package?",
@@ -40,6 +43,8 @@
   "badges": "Badges",
   "noBadges": "No badges earned yet",
   "selectLanguageCode": "Select Language Code",
+  "typeToSearchLanguages": "Type to search languages...",
+  "search": "Search...",
   "clearCounters": "Clear Counters",
   "confirmClearCounters": "Are you sure you want to clear all training counters for this package? This will reset the 'don't know' counters and training statistics.",
   "clear": "Clear",
@@ -136,8 +141,12 @@
   "itemsIKnew": "Items I knew",
   "itemsIDidNotKnow": "Items I did not know",
   "known": "Known",
+  "unknown": "Unknown",
   "important": "Important",
   "favourite": "Favourite",
+  "badge": "Badge",
+  "position": "Position",
+  "stepsUntilLearned": "Steps until learned",
   "examples": "Examples",
   "examplesHint": "Enter example sentences (one per line, use | to separate languages)",
   "noExamples": "No examples available",
@@ -237,6 +246,9 @@
   "itemOrder": "Item Order",
   "randomOrder": "Random order",
   "sequentialOrder": "Sequential order",
+  "itemType": "Item Type",
+  "dictionaryItems": "Dictionary items",
+  "examplesType": "Examples",
   "displayLanguage": "Display Language",
   "motherTongue": "Mother tongue",
   "targetLanguage": "Target language",
@@ -264,8 +276,8 @@
   "nextItem": "Next Item",
   "iDidNotKnowEither": "I Didn't Know Either",
   "exportBeforeDelete": "Export Before Deleting?",
-  "aiTextAnalysis": "AI Text Analysis",
-  "aiTextAnalysisImport": "AI Text Analysis Import",
+  "aiTextAnalysis": "Import with AI",
+  "aiTextAnalysisImport": "Import with AI Text Analysis",
   "knowledgeLevel": "Knowledge Level",
   "a1Beginner": "A1 - Beginner",
   "a2Elementary": "A2 - Elementary",
