--- a/lib/l10n/app_hu.arb
+++ b/lib/l10n/app_hu.arb
@@ -6,6 +6,8 @@
   "createPackage": "Csomag létrehozása",
   "editPackage": "Csomag szerkesztése",
   "packageDetails": "Csomag részletei",
+  "packageName": "Csomag neve",
+  "packageNameHint": "pl. Spanyol alapok, Német kezdőknek",
   "languageCode1": "Forrás nyelv kódja",
   "languageName1": "Forrás nyelv neve",
   "languageCode2": "Cél nyelv kódja",
@@ -26,6 +28,7 @@
   "uploadCustomIcon": "Egyéni ikon feltöltése (max 512x512, 1MB)",
   "customIconUploaded": "Egyéni ikon sikeresen feltöltve",
   "save": "Mentés",
+  "edit": "Szerkesztés",
   "cancel": "Mégse",
   "delete": "Törlés",
   "confirmDelete": "Biztosan törölni szeretné ezt a csomagot?",
@@ -41,6 +44,8 @@
   "badges": "Jelvények",
   "noBadges": "Még nincs megszerzett jelvény",
   "selectLanguageCode": "Nyelvkód kiválasztása",
+  "typeToSearchLanguages": "Kezdj el gépelni a nyelvek kereséséhez...",
+  "search": "Keresés...",
   "clearCounters": "Számlálók törlése",
   "confirmClearCounters": "Biztosan törölni szeretné az összes gyakorlásii számlálót ebből a csomagból? Ez visszaállítja a 'nem tudom' számlálókat és a gyakorlási statisztikákat.",
   "clear": "Törlés",
@@ -137,8 +142,12 @@
   "itemsIKnew": "Elemek, amiket tudtam",
   "itemsIDidNotKnow": "Elemek, amiket nem tudtam",
   "known": "Tudom",
+  "unknown": "Tanulandó",
   "important": "Fontos",
   "favourite": "Kedvenc",
+  "badge": "Jelvény",
+  "position": "Pozíció",
+  "stepsUntilLearned": "Lépés a megtanulásig",
   "examples": "Példamondatok",
   "examplesHint": "Írj be példamondatokat (soronként egyet, használj | jelet a nyelvek elválasztására)",
   "noExamples": "Nincsenek elérhető példamondatok",
@@ -238,6 +247,9 @@
   "itemOrder": "Elemek Sorrendje",
   "randomOrder": "Véletlenszerű sorrend",
   "sequentialOrder": "Szekvenciális sorrend",
+  "itemType": "Elem Típusa",
+  "dictionaryItems": "Szótár elemek",
+  "examplesType": "Példák",
   "displayLanguage": "Megjelenítési Nyelv",
   "motherTongue": "Anyanyelv",
   "targetLanguage": "Célnyelv",
@@ -265,8 +277,8 @@
   "nextItem": "Következő Elem",
   "iDidNotKnowEither": "Ezt Sem Tudtam",
   "exportBeforeDelete": "Exportálja törlés előtt?",
-  "aiTextAnalysis": "AI Szövegelemzés",
-  "aiTextAnalysisImport": "AI Szövegelemzés Import",
+  "aiTextAnalysis": "Import AI-val",
+  "aiTextAnalysisImport": "Import AI Szövegelemzéssel",
   "knowledgeLevel": "Tudásszint",
   "a1Beginner": "A1 - Kezdő",
   "a2Elementary": "A2 - Alapszint",
